Specify the generic type of the MaximumElementInGenericArrayList Object when creating an Object of this class and also change for loop to for each loop in the  max method.